--- a/IntroToNvChad/Lesson2.org
+++ b/IntroToNvChad/Lesson2.org
@@ -137,20 +137,55 @@ Instead of navigating through cluttered interfaces, users can execute powerful t
 
 *Why These Commands Exist & Their Use Cases*
 
-   Quitting & Saving =:q, :w, :wq= – These ensure quick control over file management, allowing users to save or exit without interruptions.
+   Quitting & Saving (=:q, :w, :wq=) – These ensure quick control over file management, allowing users to save or exit without interruptions.
     The :q! command is useful when discarding unwanted changes.
 
-    Buffer & Window Management =:bd, :vsp, :sp, close, only= – NeoVim treats buffers (open files) & windows (views) separately, making multitasking smooth.
-    Splitting windows =:vsp & :sp= lets users view multiple files side by side, while :only clears distractions by closing everything except the current window.
+    Buffer & Window Management (=:bd, :vsp, :sp, close, only=) – NeoVim treats buffers (open files) & windows (views) separately, making multitasking smooth.
+    Splitting windows (=:vsp & :sp=) lets users view multiple files side by side, while :only clears distractions by closing everything except the current window.
 
-    Chaining Commands (|) – The ability to combine commands like =:bd | close= or =:bnext | only= streamlines workflows, reducing repetitive actions & keeping the workspace tidy.
+    Chaining Commands (|) – The ability to combine commands like =:bd | close= or =:bnext | only= streamlines workflows,
+    reducing repetitive actions & keeping the workspace tidy.
 
 *Why This Method Is Superior*
 
-    _Speed & Efficiency_ – Keyboard-based commands are faster than clicking through menus.
+    Speed & Efficiency – Keyboard-based commands are faster than clicking through menus.
 
-    _Consistency_ – The command structure is predictable & follows a logic that applies across different actions.
+    Consistency – The command structure is predictable & follows a logic that applies across different actions.
 
-    _Automation & Flexibility_ – Commands can be combined (=|=) or scripted for even greater control, reducing repetitive tasks.
+    Automation & Flexibility – Commands have the option to be combined (=|=) or /scripted/ (mapping) for even greater control, reducing repetitive tasks.
 
 By relying on commands rather than a GUI-based workflow, NeoVim empowers users with precise, efficient, & scalable text editing, making it a superior choice for power users & programmers.
+
+** Soooo 'Lua'?
+*AI Summary:*
+
+Lua is a lightweight, fast, & embeddable scripting language designed for flexibility & efficiency.
+It is often used in game development, scripting, & configuration due to its simple syntax & high performance.
+
+*** Why is Lua Used to Configure NeoVim?
+*NeoVim* introduced Lua as a replacement for ~VimScript~ to provide a more modern & powerful way to configure & extend the editor. Lua is:
+
+Faster – Unlike VimScript, which runs sequentially & lacks optimization, Lua executes much faster, improving performance.
+
+More Readable & Maintainable – Lua’s syntax is cleaner & more structured compared to VimScript, making configurations easier to write & understand.
+
+More Powerful – Lua has proper data structures, better error handling, & allows for more complex logic, making it ideal for plugin development.
+
+*** Why is Lua Better than VimScript?
+*Performance* – Lua executes faster, reducing lag when running scripts or configuring NeoVim.
+
+Better Extensibility – Lua allows for more advanced features, including plugins that interact with external tools.
+
+Cleaner Syntax – Compared to VimScript, Lua is more intuitive & easier to work with.
+
+More Consistency – Lua provides a structured way to write configurations & plugins, avoiding VimScript’s quirks.
+
+*** Benefits of a Programmable & Configurable Editor
+*Customization* – Users can tailor NeoVim to their workflow, adding keybindings, themes, & automation.
+
+Productivity – With Lua scripts, repetitive tasks can be automated, saving time.
+
+Community Growth – A modern scripting language like Lua encourages more developers to create plugins, enhancing NeoVim’s ecosystem.
+
+    By adopting Lua, NeoVim becomes a faster, more modern, & more flexible editor,
+    making it an excellent choice for power users & programmers who want full control over their editing environment.
